--- a/app/src/main/res/layout/activity_alert_zones.xml
+++ b/app/src/main/res/layout/activity_alert_zones.xml
@@ -21,7 +21,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_alert_zones"/>
+    <include android:id="@+id/mainArea"
+        layout="@layout/content_alert_zones"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
