--- a/app/src/main/res/layout/fragment_add_zone_map.xml
+++ b/app/src/main/res/layout/fragment_add_zone_map.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.zoecai.baklavas.AddZoneMap">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
+    <fragment android:id="@+id/map"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        class="com.google.android.gms.maps.MapFragment">
+        </fragment>
 
 </FrameLayout>
